# VirtUE

./: .gitignore  COPYRIGHT-BSD-3.TXT  COPYRIGHT.TXT  README.md  nano.save  package-lock.json  package.json
Desktop-Prototype/: Savior Desktop.rp  Savior Desktop_recovered.rp  Sensing-log.rp
Desktop-Prototype/HTML/: apps_favorites.html  apps_favorites_view.html  apps_list_view.html  apps_tile_view.html  desktop_app.html  login.html  virtue_list_view.html  virtue_tile_view.html
Desktop-Prototype/icons/: LibreOffice-Icons.psd  hover.psd  virtue-tags.psd
Documentation/midterm/: Administrator Information.docx  Deployment Information.docx  System Architecture and Design.docx  Systems Interface Specification.docx  Test Readiness Plan.docx  User Information.docx
Documentation/system/: Administrator Information.docx  Deployment Information.docx  System Architecture and Design.docx  SystemInterfaceSpecification.html  Systems Interface Specification.docx  Test Readiness Plan.docx  User Information.docx
adminworkbench/: .angular-cli.json  package-lock.json  package.json
adminworkbench/e2e/: app.e2e-spec.ts
adminworkbench/src/: index.html
docker/server-images/: docker-compose.yml
modules/: .project  build.gradle  gradle.build  package.json  sample_data.json  settings.gradle
modules/admin/: .angular-cli.json  .gitignore  README.md  angular.json  gradle.build  package-lock.json  package.json  tsconfig.json  tslint.json  typedoc.json
modules/ecosystem/cifs-proxy/: CMakeLists.txt  Makefile  README.TXT  build.gradle  cifs-proxy.fodt  cifs-proxy.odt  settings.gradle
modules/ecosystem/cifs-proxy/cmake/: FindKrb5-README.TXT
modules/ecosystem/cifs-proxy/gradle/wrapper/: gradle-wrapper.properties
modules/ecosystem/cifs-proxy/src/ansible/: ansible.cfg  setup-ec2.yml  setup.yml
modules/ecosystem/cifs-proxy/src/cpp/: Makefile  both.cpp  cmake_install.cmake  getserviceticket.cpp  gsscache.cpp  importcreds.cpp  makeccache.cpp  switchprincipal.cpp
modules/ecosystem/cifs-proxy/src/main/java/cifsproxy/: GssApi.java  GssCache.java  JnaUtils.java
modules/ecosystem/cifs-proxy/src/main/java/com/nextcentury/savior/cifsproxy/: ActiveDirectorySecurityConfig.java  AuthProviderConfig.java  BaseSecurityConfig.java  CachingAuthenticationManager.java  CifsProxy.java  DelegatingAuthenticationManager.java  GssApi.java  GssUtils.java  JnaUtils.java
modules/ecosystem/cifs-proxy/src/main/java/com/nextcentury/savior/cifsproxy/controllers/: ExceptionHandler.java  LoginController.java  MountController.java  PrinterController.java  ShareController.java  VirtueController.java
modules/ecosystem/cifs-proxy/src/main/java/com/nextcentury/savior/cifsproxy/model/: Exportable.java  FileShare.java  Printer.java  SambaService.java  Virtue.java
modules/ecosystem/cifs-proxy/src/main/java/com/nextcentury/savior/cifsproxy/services/: KerberosUtils.java  PrinterService.java  SambaConfigManager.java  ShareService.java  VirtueService.java
modules/ecosystem/cifs-proxy/src/main/resources/: cifs-proxy-security.properties  cifs-proxy.properties  logback.xml
modules/ecosystem/cifs-proxy/src/main/resources/templates/: printer-config.tpl
modules/ecosystem/cifs-proxy/src/terraform/: Makefile  active-directory.tf  allow-delegation.sh  cifs-proxy.tf  common.tf  deploy-jar.sh  dev.tf  directory-service.tf  ds-vars.tf  file-server.tf  file_server.rdp  get-hosts.sh  make-virtue-shares.sh  network.tf  post-deploy-config.sh  print-server.tf  run-test.sh  setup-file-sharing.ps1  setup-file-sharing.tf  test-remote.sh  test.sh  test.tf  user-service.ps1  user-service.tf  users-remove.ps1  users.ps1  users.tf  virtue.conf
modules/ecosystem/cifs-proxy/src/test/java/com/nextcentury/savior/cifsproxy/model/: FileShareTest.java
modules/ecosystem/cifs-proxy/src/test/java/com/nextcentury/savior/cifsproxy/services/: VirtueServiceTest.java
modules/ecosystem/cifs-proxy/tools/: Makefile  aws-credentials.sh
modules/freerdp-java/: .classpath  .project  CMakeLists.txt  README.TXT  bootstrap.sh  build.gradle  build.sh  settings.gradle
modules/freerdp-java/src/main/cpp/: ClientContext.cpp  ClientContext.h  ConcurrentMap.h  FreeRDP.cpp  FreeRDP.h  FreeRDPWrapper.cpp  FreeRDPWrapper.h  swighelper.h
modules/freerdp-java/src/main/java/com/nextcentury/savior/freerdp/: SimpleRDP.java
modules/freerdp-java/src/main/swig/: client.i  freerdp.i  winpr.i
modules/freerdp-java/src/test/cpp/: ClientContextTest.cpp
modules/freerdp-java/src/test/java/com/nextcentury/savior/freerdp/: ClientContextTest.java  FreeRDPWrapperTest.java
(+1443 files in other folders)
